--- a/assignments/Basic_Vibration_Modeling_Analysis.ipynb
+++ b/assignments/Basic_Vibration_Modeling_Analysis.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyMBEWHVAStrAL4zROpNr37a",
+      "authorship_tag": "ABX9TyPThVmbm80mcSgCCCHtc2AT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -593,7 +593,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Mathematical Model of the system and the analytical solutionLet $\\omega^2_n=\\frac{K}{M}$ and $2 \\zeta \\omega_n=\\frac{C}{M}$. Then the above equations take the form\n",
+        "##Sample Answer"
+      ],
+      "metadata": {
+        "id": "_pZcrdcCMOK-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Mathematical Model of the system and the analytical solutionLet $\\omega^2_n=\\frac{K}{M}$ and $2 \\zeta \\omega_n=\\frac{C}{M}$. Then the above equations take the form\n",
         "\\begin{align}\n",
         "\\ddot{x}(t) + 2 \\zeta \\omega_n \\dot{x}(t) + \\omega^2_n x(t)= \\frac{1}{M}F(t).\n",
         "\\end{align}"
@@ -672,7 +681,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## b) Reason why the sensor fails"
+        "### b) Reason why the sensor fails"
       ],
       "metadata": {
         "id": "pJjjjvfjf4Ck"
@@ -737,7 +746,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## c) If Damping is negligible estimate $K$"
+        "### c) If Damping is negligible estimate $K$"
       ],
       "metadata": {
         "id": "p-kstugmh4xG"
@@ -794,7 +803,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## d) Failiure time"
+        "### d) Failiure time"
       ],
       "metadata": {
         "id": "SZGEqGSQk5Uh"
@@ -883,9 +892,7 @@
         "* a. Devise a model for this setup, and sketch a diagram identifying the key components and coefficients.\n",
         "* b. Produce the mathematical model for this setup.\n",
         "* c. Solve this mathematical model for the maximum hammer speed that can be used while limiting the force exerted on\n",
-        "the sea bed to an acceptable level.\n",
-        "* d. Produce a pdf file called q3.pdf containing your sketch, mathematical model, and solution, and upload it as part of your\n",
-        "submission."
+        "the sea bed to an acceptable level.\n"
       ],
       "metadata": {
         "id": "PKlZqi4Umx6a"
@@ -894,7 +901,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##b) Mathematical model of the problem"
+        "##Sample Answer"
+      ],
+      "metadata": {
+        "id": "bJQEari3MmKU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###b) Mathematical model of the problem"
       ],
       "metadata": {
         "id": "kclQeBRdo0IJ"
@@ -943,7 +959,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## c) Solve this mathematical model for the maximum hammer speed"
+        "### c) Solve this mathematical model for the maximum hammer speed"
       ],
       "metadata": {
         "id": "YqwPUYJf9VLW"
