--- a/assignments/Basic_Vibration_Modeling_Analysis_Sample_Answers.ipynb
+++ b/assignments/Basic_Vibration_Modeling_Analysis_Sample_Answers.ipynb
@@ -26,6 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
+      "authorship_tag": "ABX9TyMJhiSS+E/5AkiHvxS3meoj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -879,10 +880,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Meeswin engineering are bidding for a contract to build offshore wind turbines. They are proposing a new method for the\n",
+        "An Engineering company is bidding for a contract to build offshore wind turbines. They are proposing a new method for the\n",
         "construction of the mounting for the turbine tower on the sea floor, that involves pounding $500\\,kg$ concrete blocks into the\n",
-        "sea bed. The industrial hammer (which is basically a 50kg block) which is used to do this is designed so that on every\n",
-        "strike, all of its kinetic energy is transferred to the concrete block.\n",
+        "sea bed. The industrial hammer (which is basically a 50kg block) which is used to do this is designed so that the hammer and concrete block stick together and move as a single body immediately after impact.\n",
         "The sea bed is such that it can be modelled as a spring and a damper, with stiffness $k = 20k\\,N/m$, and a damping ratio\n",
         "$\\zeta = 0.1$.\n",
         "Meeswin need to ensure that the force exerted on the sea bed does not exceed $F_{max} = 600\\,N$, to avoid irreversible\n",
@@ -1101,13 +1101,6 @@
       ],
       "metadata": {
         "id": "5WM3JoEt8RRT"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "icLH7MjuRFU2"
       }
     }
   ]
