--- a/assignments/Basic_Vibration_Modeling_Analysis_Sample_Answers.ipynb
+++ b/assignments/Basic_Vibration_Modeling_Analysis_Sample_Answers.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyMJhiSS+E/5AkiHvxS3meoj",
+      "authorship_tag": "ABX9TyOAng6P+QfRnL64Spg1Y8fc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -882,7 +882,7 @@
       "source": [
         "An Engineering company is bidding for a contract to build offshore wind turbines. They are proposing a new method for the\n",
         "construction of the mounting for the turbine tower on the sea floor, that involves pounding $500\\,kg$ concrete blocks into the\n",
-        "sea bed. The industrial hammer (which is basically a 50kg block) which is used to do this is designed so that the hammer and concrete block stick together and move as a single body immediately after impact.\n",
+        "sea bed. The industrial hammer (which is basically a 50kg block) which is used to do this is designed so that the hammer and concrete block sticks together and move as a single body immediately after impact.\n",
         "The sea bed is such that it can be modelled as a spring and a damper, with stiffness $k = 20k\\,N/m$, and a damping ratio\n",
         "$\\zeta = 0.1$.\n",
         "Meeswin need to ensure that the force exerted on the sea bed does not exceed $F_{max} = 600\\,N$, to avoid irreversible\n",
