--- a/assignments/Basic_Vibration_Modeling_Analysis_Sample_Answers.ipynb
+++ b/assignments/Basic_Vibration_Modeling_Analysis_Sample_Answers.ipynb
@@ -917,7 +917,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The"
+        "The concrete block of mass $M$ and the seabed as a spring $K$ and damper $C$ can be modelled as a spring mass damper system"
       ],
       "metadata": {
         "id": "_kOO9X5udtl2"
